employee-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: employee-service

  template:
    metadata:
      labels:
        app: employee-service

    spec:
      containers:
        - name: employee-service
          image: jeshwanth1493/employee-service:latest

          imagePullPolicy: Always

          ports:
            - containerPort: 8080
