employee-service/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service-service

spec:
  type: NodePort

  selector:
    app: employee-service

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
