employee-service/k8s/ingress-qa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-service-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: employee.qa.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: employee-service-service
                port:
                  number: 8080
